<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7759FFF3"
    tools:context=".Inform_Arrange">

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/今日照服時間"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="609dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:background="#ECE8E8"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35">

        <TextView
            android:id="@+id/textView51"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/照服員"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/照服員名字"
            android:gravity="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView58"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/時間"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="51dp"
            android:text="@string/確切時間"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/照護內容"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center"
            android:text="@string/確切照護內容"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView63"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:textSize="30sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="155dp"
        android:layout_height="137dp"
        app:srcCompat="@drawable/wheelchair"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="591dp" />

</androidx.constraintlayout.widget.ConstraintLayout>