<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77E79292"
    tools:context=".Next_Inform_arrange">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="42dp"
            android:background="#ECE8E8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/下次照服時間"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#7759FFF3"
                android:gravity="center"
                android:text="下次照服時間"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/時間"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:gravity="center_vertical"
                android:text="@string/時間"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/時間顯示"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:text="時間顯示"/>

            <TextView
                android:id="@+id/照服員"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:gravity="center_vertical"
                android:text="@string/照服員"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/照服員名稱"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/照服員名字"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/照服內容"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:gravity="center_vertical"
                android:text="@string/照護內容"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/個人資料"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingMultiplier="1.5"
                android:textSize="30sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>