<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4DD8978E"
    android:screenOrientation="portrait"
    tools:context=".Recent_Inform_arrange">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DADCDF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#80D8978E"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/time" />

                <TextView
                    android:id="@+id/日排程資料查詢"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="日排程資料查詢"
                    android:textSize="30sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/日期"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/時間"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/最近照服時間"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="無資料"
                android:textSize="30sp" />
            <TextView
                android:id="@+id/時間"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/時間"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/時間顯示"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="無資料"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/照服員"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/照服員"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/照服員名稱"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/照服內容"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/照護內容"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/工作內容"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/個人資料"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:gravity="top|left"
                    android:textSize="18sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/完成度"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/備註"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="備註"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/備註顯示"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>