<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4DD8978E"
    tools:context=".Next_Inform_arrange">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="35dp"
            android:background="#ECE8E8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#779BC2DD"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/time" />

                <TextView
                    android:id="@+id/歷史照服時間"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="歷史排程通知"
                    android:textSize="30sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/日期"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ACACD8"
                android:gravity="center|center_vertical"
                android:text="日期:"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/日期下拉選單"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/時間"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ACACD8"
                android:gravity="center|center_vertical"
                android:text="@string/時間"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/時間顯示"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="無資料"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/照服員"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ACACD8"
                android:gravity="center|center_vertical"
                android:text="@string/照服員"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/照服員名稱"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/照服內容"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#ACACD8"
                android:gravity="center|center_vertical"
                android:text="@string/照護內容"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/個人資料"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingMultiplier="1.0"
                android:textSize="22sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>